--- a/src/web/html/setup.html
+++ b/src/web/html/setup.html
@@ -716,6 +716,7 @@
                 var opts = [[0, "None"], [1, "SSD1306 0.96\""], [2, "SH1106 1.3\""], [3, "Nokia5110"]];
                 if("ESP32" == type)
                     opts.push([10, "ePaper"]);
+                    opts.push([20, "ST7789 240x240"]);
                 var dispType = sel("disp_typ", opts, obj["disp_typ"]);
                 document.getElementById("dispType").append(
                     ml("div", {class: "row mb-3"}, [
