--- a/src/web/html/setup.html
+++ b/src/web/html/setup.html
@@ -453,6 +453,10 @@
                 getAjax("/api/setup", apiCbNtp, "POST", JSON.stringify(obj));
             }
 
+
+
+
+
             function scan() {
                 var obj = new Object();
                 obj.cmd = "scan_wifi";
@@ -713,10 +717,11 @@
                     );
                 }
 
-                var opts = [[0, "None"], [1, "SSD1306 0.96\""], [2, "SH1106 1.3\""], [3, "Nokia5110"]];
-                if("ESP32" == type)
-                    opts.push([10, "ePaper"]);
-                    opts.push([20, "ST7789 240x240"]);
+                //var opts = [[0, "None"], [1, "SSD1306 0.96\""], [2, "SH1106 1.3\""], [3, "Nokia5110"]];
+                //if("ESP32" == type)
+                //    opts.push([10, "ePaper"]);
+                //    opts.push([20, "ST7789 240x240"]);
+                var opts = obj["dspOptions"];
                 var dispType = sel("disp_typ", opts, obj["disp_typ"]);
                 document.getElementById("dispType").append(
                     ml("div", {class: "row mb-3"}, [
@@ -765,6 +770,10 @@
                 }
             }
 
+            function parseDspOptions(obj) {
+                console.log ( obj );
+            }
+
             function parse(root) {
                 if(null != root) {
                     parseSys(root["system"]);
@@ -777,6 +786,7 @@
                     parseRadio(root["radio"]);
                     parseSerial(root["serial"]);
                     parseDisplay(root["display"], root["system"]["esp_type"], root["system"]);
+                    parseDspOptions(root["dspOptions"]);
                     getAjax("/api/inverter/list", parseIv);
                 }
             }
